Switch to using autotools
This way we get automatic header dependency tracking, and an avenue to expand
support to more platforms.

Signed-off-by: Morten Hustveit <mortehu@google.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,20 @@
 *.a
+*.cache
+*.in
+*.log
 *.o
+*.status
 .*.sw?
-main.elf
-main.hex
-mpide
-mpide-*
+/.deps
+/aclocal.m4
+/config.guess
+/config.sub
+/configure
+/depcomp
+/install-sh
+/missing
+/motor.elf
+/motor.hex
+/mpide
+/mpide-*
+Makefile
