Created simple test program
All motor output pins are left floating, except one at a time.

Signed-off-by: Morten Hustveit <morten.hustveit@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,8 +6,7 @@ AM_CXXFLAGS = -ffunction-sections -fdata-sections -O3 -Wall -fno-exceptions -fno
 AM_LDFLAGS = -Wl,--gc-sections
 
 motor_elf_SOURCES = \
-  main.cc \
-  motor.cc
+  main.cc
 motor_elf_LDADD = libplatform.a
 
 if SYSTEM_ARDUINO
@@ -16,8 +15,7 @@ AM_CPPFLAGS = -DSYSTEM_ARDUINO=1
 libplatform_a_SOURCES = \
   $(WIRING_PATH)/wiring.c \
   $(WIRING_PATH)/wiring_analog.c \
-  $(WIRING_PATH)/wiring_digital.c \
-  serial_arduino.c
+  $(WIRING_PATH)/wiring_digital.c
 
 SERIAL_PORT=/dev/serial/by-id/usb-Arduino_*-if00
 AVRDUDEFLAGS=$(AVRDUDE_ARGS) -P $(SERIAL_PORT) -b 115200 -v -U
@@ -37,8 +35,7 @@ libplatform_a_SOURCES = \
   $(WIRING_PATH)/task_manager.c \
   $(WIRING_PATH)/wiring.c \
   $(WIRING_PATH)/wiring_analog.c \
-  $(WIRING_PATH)/wiring_digital.c \
-  serial_uno32.c
+  $(WIRING_PATH)/wiring_digital.c
 
 SERIAL_PORT=/dev/serial/by-id/usb-FTDI_FT232R_USB_UART_AE00DE7L-if00-port0
 AVRDUDEFLAGS=-C$(MPIDE_PATH)/hardware/tools/avrdude.conf $(AVRDUDE_ARGS) -P $(SERIAL_PORT) -b 115200 -v -U
@@ -53,6 +50,5 @@ endif
 if SYSTEM_GNU
 AM_CPPFLAGS = -DSYSTEM_GNU=1
 libplatform_a_SOURCES = \
-  hardware.cc \
-  serial_linux.c
+  hardware.cc
 endif
